2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-10  Andy Wingo  <wingo@pobox.com>

	Patch by: Patrick Bernaud <patrickb at chez.com>
	
	* gnome/overrides/gdk.defs (gdk-window-set-cursor): Restore
	(null-ok) for the cursor-parameter, lost in the regeneration.
	Fixes #449790.

2007-12-10  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gtk.defs: 
	* gnome/gw/gtk-support.h: 
	* gnome/gw/gtk-support.c
	(_wrap_gtk_ui_manager_add_ui_from_string): Wrap function without
	string length argument.

	* examples/tutorial/hello2.scm: 
	* examples/tutorial/hello.scm: 
	* examples/guile-gtk-demo/guile-gtk-demo.scm: Use the right extra
	modules.

	* examples/guile-gtk-demo/demos/ui-manager.scm: Use (oop goops),
	add-ui-from-string changes.

	* examples/guile-gtk-demo/demos/tree-store.scm: 
	* examples/guile-gtk-demo/demos/tree-model.scm: 
	* examples/guile-gtk-demo/demos/sizegroup.scm: 
	* examples/guile-gtk-demo/demos/panes.scm:
	* examples/guile-gtk-demo/demos/menus.scm: 
	* examples/guile-gtk-demo/demos/list-store.scm: 
	* examples/guile-gtk-demo/demos/entry-completion.scm: 
	* examples/guile-gtk-demo/demos/editable-cells.scm: 
	* examples/guile-gtk-demo/demos/dialog.scm: 
	* examples/guile-gtk-demo/demos/continuations.scm: 
	* examples/guile-gtk-demo/demos/button-box.scm: Use (oop goops)
	etc.

	* examples/guile-gtk-demo/demos/appwindow.scm: Use (oop goops),
	give up on loading a custom stock icon (how to I get the directory
	of this source file anyways??), use lengthless invocation of
	add-ui-from-string.

2007-12-09  Andy Wingo  <wingo@pobox.com>

	* examples/tic-tac-toe.scm: Crackily avoid
	`gtk-adjustment-get-value', as it is broken on ppc32.

	* gnome/gw/guile-gtk-tree-model.c: Terrible fixes to enter guile
	mode within all of the vmethods. Assuredly in the future things
	will not be as painful.

	* gnome/gw/gtk-support.c (scm_to_locale_string_dynwind): New